src/app.scss
:root {
	--background: white;
	--foreground: black;
}

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

body,
html {
	height: 100%;
	background-color: var(--background);
	color: var(--foreground);
	font-family: 'Roboto Mono', monospace;
}

